# rubyaction

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: Makefile  api.rst  conf.py  event_dispatcher.rst  index.rst  physics.rst
docs/_build/doctrees/: api.doctree  environment.pickle  event_dispatcher.doctree  index.doctree
docs/_build/html/: .buildinfo  api.html  event_dispatcher.html  genindex.html  index.html  objects.inv  rb-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.txt  index.txt
docs/api/physics/: world.rst
extlibs/: CMakeLists.txt
extlibs/Box2D/: CMakeLists.txt
extlibs/SDL2/: CMakeLists.txt
extlibs/SDL2_ttf/: CMakeLists.txt
extlibs/SDL2_ttf/freetype/: CMakeLists.txt
include/: Application.hpp  BaseFont.hpp  Bitmap.hpp  Clock.hpp  EventDispatcher.hpp  FPSManager.hpp  Font.hpp  FontBase.hpp  RenderTarget.hpp  RubyEngine.hpp  RubyObject.hpp  Sprite.hpp  Stage.hpp  TTFont.hpp  TextField.hpp  Texture.hpp  TextureBase.hpp  TextureRegion.hpp  Window.hpp
include/physics/: Body.hpp  DebugDraw.hpp  Physics.hpp  World.hpp
include/util/: array.hpp  hash.hpp  values.hpp  wrapper.hpp
samples/anim/tween/: main.rb  run.sh  tween.rb
samples/gideros/graphics/color_transform/: main.rb  run.sh
samples/render/render_target/: main.rb
samples/text/bitmap/: almendra.txt  cartoon.txt  emulogic.txt  eroded.txt  main.rb
samples/text/truetype/: main.rb
samples/transformations/anchor/: main.rb
samples/transformations/relative/: main.rb
samples/transformations/rotation/: main.rb
samples/ui/button/: button.rb  main.rb
src/: Application.cpp  BaseFont.cpp  Bitmap.cpp  Clock.cpp  EventDispatcher.cpp  FPSManager.cpp  Font.cpp  FontBase.cpp  Host.cpp  RenderTarget.cpp  RubyEngine.cpp  RubyObject.cpp  Sprite.cpp  Stage.cpp  TTFont.cpp  TextField.cpp  Texture.cpp  TextureBase.cpp  TextureRegion.cpp  Window.cpp
src/physics/: Body.cpp  DebugDraw.cpp  Physics.cpp  World.cpp
